merge sonar into master